Fixing vimeo styles, wrapping up navbar

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ small {
   font-size: 13px;
   line-height: 18px;
 }
-/*	Column class / mixins 
+/*	Column class / mixins
 	---------------------	*/
 .1-column {
   width: 68px;
@@ -243,7 +243,7 @@ small {
 .10-column {
   width: 896px;
 }
-/*		Default Layout: 992px. 
+/*		Default Layout: 992px.
 		Gutters: 24px.
 		Outer margins: 48px.
 		Leftover space for scrollbars @1024px: 32px.
@@ -377,17 +377,17 @@ a:visited {
   margin-bottom: 8px;
   text-shadow: rgba(250, 246, 246, 0.92) 0px 2px 3px;
 }
-.text {
+.section.text {
   height: auto;
   -webkit-box-shadow: 0 -6px 18px rgba(0, 0, 0, 0.55);
   -moz-box-shadow: 0 -6px 18px rgba(0, 0, 0, 0.55);
   box-shadow: 0 -6px 18px rgba(0, 0, 0, 0.55);
 }
-.text h1,
-.text h2,
-.text h3,
-.text h4,
-.text h5 {
+.section.text h1,
+.section.text h2,
+.section.text h3,
+.section.text h4,
+.section.text h5 {
   color: black;
   text-shadow: transparent 0 0 0;
 }
@@ -405,9 +405,11 @@ a:visited {
 }
 .vimeo {
   padding: 0;
-  height: 707px;
+  height: auto;
 }
 .video-caption {
+  font-size: 0.8em;
+  line-height: 1.3em;
   max-height: 344px;
   overflow: auto;
   position: absolute;
@@ -416,7 +418,7 @@ a:visited {
   margin-top: 8px;
   margin-bottom: 8px;
   z-index: 999999;
-  width: 436px;
+  max-width: 30%;
   background-color: rgba(10, 10, 14, 0.78);
   color: white;
   padding: 12px 22px;
@@ -467,50 +469,59 @@ Elastic videos
 }
 /* --- Navbar stuff --- */
 #nav {
+  opacity: 0.65;
   border-radius: 4px;
-  left: -194px;
-  width: 224px;
-  font-size: 12px;
+  left: -190px;
+  max-height: 100%;
+  overflow-y: auto;
+  max-width: 224px;
+  font-size: 11px;
   line-height: 1.25em;
   position: fixed;
   top: 0;
   z-index: 99999;
-  background-color: rgba(20, 20, 20, 0.9);
+  background-color: rgba(20, 20, 20, 0.45);
   padding: 2px 1px;
-  opacity: 0.82;
+  -webkit-transition: all .36s linear ;
+  -moz-transition: all .36s linear ;
+  -o-transition: all .36s linear ;
+  transition: all .36s linear ;
   -webkit-transition: opacity 0.3s ease-out 0.2s;
   -moz-transition: opacity 0.3s ease-out 0.2s;
   -o-transition: opacity 0.3s ease-out 0.2s;
   transition: opacity 0.3s ease-out 0.2s;
-  -webkit-transition: all .16s linear ;
-  -moz-transition: all .16s linear ;
-  -o-transition: all .16s linear ;
-  transition: all .16s linear ;
 }
 #nav:hover {
   opacity: 1;
-  left: -4px;
+  left: 0;
   -webkit-transition: all 0.45s ease-out 2.2s;
   -moz-transition: all 0.45s ease-out 2.2s;
   -o-transition: all 0.45s ease-out 2.2s;
   transition: all 0.45s ease-out 2.2s;
+}
+#nav a:link {
+  text-decoration: none;
+  font-weight: bold;
 }
 .nav-section {
   min-height: 24px;
   position: relative;
   cursor: pointer;
   display: block;
-  color: black;
-  background-color: #999;
+  background-color: rgba(250, 250, 250, 0.8);
   margin: 2px 2px;
   margin-right: 4px;
-  padding: 4px 4px;
+  padding: 4px 6px;
   border-radius: 2px;
-  padding-right: 24px;
+  padding-right: 32px;
+  color: #4c4c4c !important;
+}
+.nav-section:hover {
+  color: black !important;
 }
 .nav-section .type-icon {
   position: absolute;
-  right: 4px;
+  right: 6px;
   top: 50%;
   margin-top: -9px;
 }
@@ -743,7 +754,6 @@ px      68    160    252    344    436    528    620    712    */
     width: 100%;
   }
   .section {
-    padding: 32px 28px 60px;
     width: 100%;
   }
 }
@@ -759,18 +769,34 @@ px      68    160    252    */
     width: 100%;
   }
   .section {
-    padding: 24px 34px 60px;
+    padding: 0;
     height: 436px;
   }
   .section .imagecaption {
     line-height: 1.4em;
   }
   .section h2 {
-    font-size: 16px;
+    font-size: 22px;
     line-height: 1.3em;
   }
   .vimeo {
-    height: 252px;
+    padding: 0 !important;
+  }
+  .video-caption {
+    font-size: 11px;
+    line-height: 1.25em;
+    max-height: 98px;
+    max-width: 45%;
+    overflow: auto;
+    position: absolute;
+    bottom: 42px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    z-index: 999999;
+    background-color: rgba(10, 10, 14, 0.78);
+    color: white;
+    padding: 8px 10px;
+    border-radius: 4px;
   }
   .image h2 {
     margin-top: 92px;
@@ -814,7 +840,10 @@ px      68    160    252    */
   #builder {
     width: 252px;
   }
-  .text-container {
+  .text h2 {
+    padding-top: 24px;
+  }
+  .text .text-container {
     margin-top: 18px;
     padding-bottom: 18px;
     width: 75%;
@@ -822,7 +851,7 @@ px      68    160    252    */
     margin-left: auto;
     margin-right: auto;
   }
-  .text-container p {
+  .text .text-container p {
     margin-top: 1em;
   }
 }
